--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odyssey Art Render</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </head>
 <body>
     <header>
@@ -14,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href="#">Menu</a></li>
-                <li><a href="#">Imagery Art</a></li>
-                <li><a href="#">Visual Art</a></li>
+                <li><a href="#imagery">Imagery Art</a></li>
+                <li><a href="#visual">Visual Art</a></li>
             </ul>
         </nav>
     </header>
